fix vertical gap between notes

--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ nav .brand-logo {
 
 .mdc-card {
     height: 148px;
+    margin-bottom: 16px;
 }
 
 .mdc-card header, 
